--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guia Jurídico</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+ <html lang="pt-br">
+   <head>
+     <meta charset="UTF-8" />
+
+     <link rel="icon" href="/favicon2.ico" />
+     
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     
+     <meta name="theme-color" content="#000000" />
+     <meta
+       name="description"
+       content="Guia Jurídico - Conectando talentos jurídicos às melhores oportunidades."
+     />
+     <link rel="apple-touch-icon" href="/logo192.png" />
+     <link rel="manifest" href="/manifest.json" />
+     <title>Guia Jurídico</title>
+   </head>
+   <body>
+     <div id="root"></div>
+     <script type="module" src="/src/main.jsx"></script>
+   </body>
+ </html>
